--- a/Nginx/docker-compose.yaml
+++ b/Nginx/docker-compose.yaml
@@ -24,6 +24,8 @@ services:
     container_name: node-app
     tty: true
     restart: always
+    depends_on: 
+      - db
     networks: 
       - net-node  
 
@@ -32,8 +34,11 @@ services:
       context: .
       dockerfile: Dockerfile.nginx
     container_name: nginx
+    entrypoint: dockerize -wait tcp://mysql:3306 -timeout 30s nginx -g "daemon off";
     restart: always
     tty: true
+    depends_on: 
+      - node-app
     ports: 
       - 8080:80
     networks: 
