Removendo o Dockerfile do Nginx e adicionando no Dockerfile do Node

--- a/Nginx/Dockerfile.node
+++ b/Nginx/Dockerfile.node
@@ -2,6 +2,16 @@
 
 FROM node:12.7-alpine
 
+#dockerrize
+RUN apk add --no-cache openssl
+
+ENV DOCKERIZE_VERSION v0.6.1
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+
+
+
 #definindo diretório de trabalho
 WORKDIR /app
 
@@ -13,7 +23,3 @@ RUN npm install
 
 #expondo porta
 EXPOSE 3000
-
-#executando 
-ENTRYPOINT  [ "node" , "index.js"]
-
