--- a/Nginx/docker-compose.yaml
+++ b/Nginx/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       context: .
       dockerfile: Dockerfile.node
     container_name: node-app
+    entrypoint: dockerize -wait tcp://mysql:3306 -timeout 30s node index.js
     tty: true
     restart: always
     depends_on: 
@@ -33,8 +34,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile.nginx
-    container_name: nginx
-    entrypoint: dockerize -wait tcp://mysql:3306 -timeout 30s nginx -g "daemon off";
+    container_name: nginx    
     restart: always
     tty: true
     depends_on: 
